force-app/main/default/objects/Pathology_Request_Test__c/Pathology_Request_Test__c.object-meta.xml
<CustomObject>
    <label>Pathology Request Test</label>
    <nameField>
        <label>Pathology Request Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pathology Request Test</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>