force-app/main/default/objects/Pathology_Request_Test__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <formula>&quot;X&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check</label>
    <type>Text</type>
</CustomField>