force-app/main/default/objects/Pathology_Request_Test__c/fields/Lab_Code__c.field-meta.xml
<CustomField>
    <fullName>Lab_Code__c</fullName>
    <label>Lab Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>