force-app/main/default/objects/Pathology_Request_Test__c/fields/Pathology_Request__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Request__c</fullName>
    <label>Pathology Request</label>
    <referenceTo>Pathology_Request__c</referenceTo>
    <relationshipLabel>Pathology Request Test</relationshipLabel>
    <relationshipName>Pathology_Request_Test</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>